# fit-stat-rs

./: Cargo.toml  LICENSE  readme.md
.github/workflows/: ci.yml
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
src/: lib.rs  main.rs
tests/: report.rs  user.rs
