[package]
name = "BMI_calculator"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
libm = "0.2.16"
serde = { version = "1.0.228", default-features = false, features = [
  "derive",
  "alloc",
], optional = true }
bincode-next = { version = "3.1", default-features = false, features = [
  "alloc",
  "derive",
], optional = true }

[features]
default = []

serde = ["dep:serde"]
bincode = ["dep:bincode-next"]

[profile.release]
opt-level = 3
codegen-units = 1
strip = true
lto = true
panic = "abort"
